--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.5'
 
 services:
   nginx-php-fpm:
@@ -35,6 +35,7 @@ services:
 
 networks:
   custom_network:
+    name: custom_network
     driver: bridge
     ipam:
       driver: default
